<resources>
    <string name="app_name">Demo Simple Click</string>
    <string name="show">Display what user enters</string>
    <string name="editTextInput">Enter Something</string>
    <string name="butDisplay">DISPLAY</string>
    <string name="disToast">My First Toast</string>
    <string name="butEnable">Enable</string>
    <string name="butDisable">Disable</string>
    <string name="radMale">Male</string>
    <string name="radFemale">Female</string>

</resources>